--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </button>
     
     <div class="popup" id="settings-popup">
-        <div class="popup-content" id="popup-content">
+        <div class="popup-content">
             <span class="close-button" onclick="togglePopup()">&times;</span>
             <div class="menu-section">
                 <h3>更换搜索引擎</h3>
