--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     </button>
     
     <div class="popup" id="settings-popup">
-        <div class="popup-content">
+        <div class="popup-header">
+            <h2>设置</h2>
             <span class="close-button" onclick="togglePopup()">&times;</span>
+        </div>
+        <div class="popup-content">
             <div class="menu-section">
                 <h3>更换搜索引擎</h3>
                 <button onclick="setEngine('google')">Google <span id="google-check" class="check-mark">√</span></button>
