--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         </div>
         <div class="popup-content">
             <div class="menu-section">
+                <p>QuickSP-0.0.3-Beta1</p>
+                <p>可向下滑动</p>
                 <h3>更换搜索引擎</h3>
                 <button onclick="setEngine('google')">Google <span id="google-check" class="check-mark">√</span></button>
                 <button onclick="setEngine('bing')">Bing <span id="bing-check" class="check-mark">√</span></button>
@@ -63,7 +65,7 @@
             <div class="menu-section">
                 <h3>关于</h3>
                 <button onclick="window.open('https://github.com/snesnya/quicksp-web', '_blank')">GitHub</button>
-                <button>版本号 0.0.2</button>
+                <button>版本号 0.0.3</button>
             </div>
         </div>
     </div>
