--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="popup-content">
             <div class="menu-section">
-                <p>QuickSP-0.0.3-Beta2</p>
+                <p>QuickSP-0.0.3-Beta3</p>
                 <p>可向下滑动</p>
                 <h3>更换搜索引擎</h3>
                 <button onclick="setEngine('google')">Google <span id="google-check" class="check-mark">√</span></button>
@@ -64,15 +64,20 @@
             </div>
             <div class="menu-section">
                 <h3>自定义大小</h3>
-                <button>搜索框长度 <input type="text" id="search-width" placeholder="350px" oninput="changeSize('search-container', 'width')"></button>
+                <button>搜索框长度 <input type="text" id="search-width" placeholder="300px" oninput="changeSize('search-container', 'width')"></button>
                 <button>搜索框宽度 <input type="text" id="search-height" placeholder="40px" oninput="changeSize('search-container', 'height')"></button>
                 <button>阴影 X轴 <input type="text" id="shadow-x" placeholder="0px" oninput="changeShadow()"></button>
                 <button>阴影 Y轴 <input type="text" id="shadow-y" placeholder="4px" oninput="changeShadow()"></button>
             </div>
             <div class="menu-section">
+                <h3>自定义位置</h3>
+                <button>X轴 <input type="text" id="search-position-x" placeholder="0px" oninput="changePosition('search-container', 'left')"></button>
+                <button>Y轴 <input type="text" id="search-position-y" placeholder="0px" oninput="changePosition('search-container', 'top')"></button>
+            </div>
+            <div class="menu-section">
                 <h3>关于</h3>
                 <button onclick="window.open('https://github.com/snesnya/quicksp-web', '_blank')">GitHub</button>
-                <button>版本号 0.0.3</button>
+                <button>版本号 0.0.3-Beta3</button>
             </div>
         </div>
     </div>
