--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="popup-content">
             <div class="menu-section">
-                <p>QuickSP-0.0.3-Beta3</p>
+                <p>QuickSP-0.0.3-Release1</p>
                 <p>可向下滑动</p>
                 <h3>更换搜索引擎</h3>
                 <button onclick="setEngine('google')">Google <span id="google-check" class="check-mark">√</span></button>
@@ -47,7 +47,8 @@
             </div>
             <div class="menu-section">
                 <h3>预置主题</h3>
-                <button onclick="setPresetTheme('light')">浅色主题</button>
+                <button onclick="setPresetTheme('light')">浅色模式</button>
+                <button onclick="setPresetTheme('light-old')">浅色模式(旧)</button>
                 <button onclick="setPresetTheme('dark')">深色主题</button>
                 <button onclick="setPresetTheme('material-you')">Material You</button>
                 <button onclick="setPresetTheme('material-design')">Material Design</button>
@@ -68,16 +69,18 @@
                 <button>搜索框宽度 <input type="text" id="search-height" placeholder="40px" oninput="changeSize('search-container', 'height')"></button>
                 <button>阴影 X轴 <input type="text" id="shadow-x" placeholder="0px" oninput="changeShadow()"></button>
                 <button>阴影 Y轴 <input type="text" id="shadow-y" placeholder="4px" oninput="changeShadow()"></button>
+                <button onclick="resetSizeDefaults()">还原默认</button>
             </div>
             <div class="menu-section">
                 <h3>自定义位置</h3>
                 <button>X轴 <input type="text" id="search-position-x" placeholder="0px" oninput="changePosition('search-container', 'left')"></button>
                 <button>Y轴 <input type="text" id="search-position-y" placeholder="0px" oninput="changePosition('search-container', 'top')"></button>
+                <button onclick="resetPositionDefaults()">还原默认</button>
             </div>
             <div class="menu-section">
                 <h3>关于</h3>
                 <button onclick="window.open('https://github.com/snesnya/quicksp-web', '_blank')">GitHub</button>
-                <button>版本号 0.0.3-Beta3</button>
+                <button>版本号 0.0.3-Release1</button>
             </div>
         </div>
     </div>
