--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="popup-content">
             <div class="menu-section">
-                <p>QuickSP-0.0.3-Release1</p>
+                <p>QuickSP-0.0.3</p>
                 <p>可向下滑动</p>
                 <button class="center-button" onclick="resetAllDefaults()">还原全部设置为默认</button>
                 <h3>更换搜索引擎</h3>
@@ -81,7 +81,7 @@
             <div class="menu-section">
                 <h3>关于</h3>
                 <button onclick="window.open('https://github.com/snesnya/quicksp-web', '_blank')">GitHub</button>
-                <button>版本号 0.0.3-Release1</button>
+                <button>版本号 0.0.3</button>
             </div>
         </div>
     </div>
