--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <button>搜索文字颜色 <input type="text" id="search-text-color" placeholder="#000000" oninput="changeColor('search-query', 'color')"></button>
                 <button>搜索按钮颜色 <input type="text" id="search-button-color" placeholder="#4CAF50" oninput="changeColor('search-button', 'backgroundColor')"></button>
                 <button>设置按钮颜色 <input type="text" id="settings-button-color" placeholder="#FF9800" oninput="changeColor('settings-button', 'backgroundColor')"></button>
+                <button>模糊背景 <input type="checkbox" id="blur-background" onchange="toggleBlurBackground()"></button>
                 <button onclick="resetDefaults()">还原默认</button>
             </div>
             <div class="menu-section">
