--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <p>可向下滑动</p>
                 <button class="center-button" onclick="resetAllDefaults()">还原全部设置为默认</button>
                 <h3>更换搜索引擎</h3>
+                <button onclick="setEngine('web-link')">网页链接 <span id="web-link-check" class="check-mark">√</span></button>
                 <button onclick="setEngine('google')">Google <span id="google-check" class="check-mark">√</span></button>
                 <button onclick="setEngine('bing')">Bing <span id="bing-check" class="check-mark">√</span></button>
                 <button onclick="setEngine('duckduckgo')">DuckDuckGo <span id="duckduckgo-check" class="check-mark">√</span></button>
