--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="popup-content">
             <div class="menu-section">
-                <p>QuickSP-0.0.4</p>
+                <p>QuickSP-0.0.5</p>
                 <p>可向下滑动</p>
                 <button class="center-button" onclick="resetAllDefaults()">还原全部设置为默认</button>
                 <h3>更换搜索引擎</h3>
@@ -72,9 +72,8 @@
                 <h3>自定义Logo</h3>
                 <button onclick="document.getElementById('logo-upload').click()">上传Logo</button>
                 <input type="file" id="logo-upload" class="upload-input" accept="image/*" onchange="changeLogo(event)">
-                <button>设置Logo文本 <input type="text" id="logo-text" placeholder="输入Logo文本"></button>
+                <button>设置Logo文本 <input type="text" id="logo-text" placeholder="输入Logo文本" oninput="setLogoText()"></button>
                 <button onclick="clearLogo()">清除Logo</button>
-                <button onclick="resetLogoDefaults()">还原默认</button>
             </div>
             <div class="menu-section">
                 <h3>自定义大小</h3>
@@ -93,7 +92,7 @@
             <div class="menu-section">
                 <h3>关于</h3>
                 <button onclick="window.open('https://github.com/snesnya/quicksp-web', '_blank')">GitHub</button>
-                <button>版本号 0.0.4</button>
+                <button>版本号 0.0.5</button>
             </div>
         </div>
     </div>
