--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         </div>
         <div class="popup-content">
             <div class="menu-section">
-                <input type="text" id="custom-engine-url" placeholder="https://example.net/%s" style="width: 100%;">
-                <button onclick="saveCustomEngine()">保存</button>
+                <input type="text" id="custom-engine-url" placeholder="https://example.net/%s" style="width: calc(100% - 24px); margin-bottom: 10px;">
+                <button style="width: 100%;" onclick="saveCustomEngine()">保存</button>
             </div>
         </div>
     </div>
