--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="popup-content">
             <div class="menu-section">
-                <p>QuickSP-0.0.6</p>
+                <p>QuickSP-0.0.7_Beta1</p>
                 <p>可向下滑动</p>
                 <button class="center-button" onclick="resetAllDefaults()">还原全部设置为默认</button>
                 <h3>更换搜索引擎</h3>
@@ -44,6 +44,7 @@
                 <button onclick="setEngine('duckduckgo')">DuckDuckGo <span id="duckduckgo-check" class="check-mark">√</span></button>
                 <button onclick="setEngine('wikipedia-zh')">Wikipedia ZH <span id="wikipedia-zh-check" class="check-mark">√</span></button>
                 <button onclick="setEngine('wikipedia-en')">Wikipedia EN <span id="wikipedia-en-check" class="check-mark">√</span></button>
+                <button onclick="setEngine('starquest')">StarQuest <span id="starquest-check" class="check-mark">√</span></button>
                 <button onclick="toggleCustomEnginePopup()">自定义搜索引擎 <span id="custom-engine-check" class="check-mark">√</span></button>
             </div>
             <div class="menu-section">
@@ -93,7 +94,7 @@
             <div class="menu-section">
                 <h3>关于</h3>
                 <button onclick="window.open('https://github.com/snesnya/quicksp-web', '_blank')">GitHub</button>
-                <button>版本号 0.0.6</button>
+                <button>版本号 0.0.7_Beta1</button>
             </div>
         </div>
     </div>
