--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <div id="logo-container" style="display: flex; justify-content: center; align-items: center; flex-direction: column; margin-bottom: 20px;">
         <!-- Logo容器 -->
     </div>
-    <div class="search-container" id="search-container">
+    <div class="search-container" id="search-container" style="position: relative;">
         <input type="text" class="search-box" id="search-query" placeholder="输入搜索内容..." onkeypress="handleKeyPress(event)">
         <button class="search-button" id="search-button" onclick="search()">
             <span class="material-icons">search</span>
         </button>
+    </div>
+    <div id="description-container" style="display: flex; justify-content: center; align-items: center; flex-direction: column; margin-top: 20px;">
+        <!-- 描述文本容器 -->
     </div>
 
     <div class="ie-warning" id="ie-warning">
@@ -34,7 +37,7 @@
         </div>
         <div class="popup-content">
             <div class="menu-section">
-                <p>QuickSP-0.0.7_Beta2</p>
+                <p>QuickSP-0.0.7_Beta3</p>
                 <p>可向下滑动</p>
                 <button class="center-button" onclick="resetAllDefaults()">还原全部设置为默认</button>
                 <h3>更换搜索引擎</h3>
@@ -78,6 +81,11 @@
                 <button onclick="clearLogo()">清除Logo</button>
             </div>
             <div class="menu-section">
+                <h3>自定义描述文本</h3>
+                <button onclick="toggleDescriptionPopup()">设置描述文本</button>
+                <button onclick="clearDescription()">清除描述文本</button>
+            </div>
+            <div class="menu-section">
                 <h3>自定义大小</h3>
                 <button>搜索框长度 <input type="text" id="search-width" placeholder="300px" oninput="changeSize('search-container', 'width')"></button>
                 <button>搜索框宽度 <input type="text" id="search-height" placeholder="40px" oninput="changeSize('search-container', 'height')"></button>
@@ -94,7 +102,20 @@
             <div class="menu-section">
                 <h3>关于</h3>
                 <button onclick="window.open('https://github.com/snesnya/quicksp-web', '_blank')">GitHub</button>
-                <button>版本号 0.0.7_Beta2</button>
+                <button>版本号 0.0.7_Beta3</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="popup" id="description-popup" style="display: none;">
+        <div class="popup-header">
+            <h2>设置描述文本</h2>
+            <span class="close-button" onclick="toggleDescriptionPopup()">&times;</span>
+        </div>
+        <div class="popup-content">
+            <div class="menu-section">
+                <textarea id="description-text" placeholder="输入描述文本..." style="width: calc(100% - 24px); height: 100px;"></textarea>
+                <button style="width: 100%;" onclick="saveDescriptionText()">保存</button>
             </div>
         </div>
     </div>
