--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="menu-section">
                     <h3>关于</h3>
                     <button onclick="window.open('https://github.com/snesnya/quicksp-web', '_blank')">GitHub</button>
-                    <button>版本号 0.0.7_Beta3</button>
+                    <button>版本号 0.1</button>
                 </div>
             </div>
         </div>
