--- a/index.html
+++ b/index.html
@@ -142,10 +142,17 @@
                     </div>
                     <button onclick="resetPositionDefaults()">还原默认</button>
                 </div>
+
+                <!-- Debug Mode Section -->
+                <div class="menu-section">
+                    <h3>调试模式</h3>
+                    <button onclick="toggleDebugMode()">启动调试模式</button>
+                </div>
+
                 <div class="menu-section">
                     <h3>关于</h3>
                     <button onclick="window.open('https://github.com/snesnya/quicksp-web', '_blank')">GitHub</button>
-                    <button>版本号 0.1</button>
+                    <button>版本号 0.1.1</button>
                 </div>
             </div>
         </div>
