--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
             </div>
             <div class="modal-body">
                 <div class="menu-section">
+                    <h3>输入描述文本</h3>
                     <textarea id="description-text" class="text-field" placeholder="输入描述文本..." style="width: calc(100% - 24px); height: 100px;"></textarea>
                     <button style="width: 100%;" onclick="saveDescriptionText()">保存</button>
                 </div>
@@ -139,6 +140,7 @@
             </div>
             <div class="modal-body">
                 <div class="menu-section">
+                    <p>注意：使用 %s 作为搜索内容占位符。</p>
                     <input type="text" id="custom-engine-url" class="text-field" placeholder="https://example.net/%s" style="width: calc(100% - 24px); margin-bottom: 10px;">
                     <button style="width: 100%;" onclick="saveCustomEngine()">保存</button>
                 </div>
